Fixed slight overflow on tables

--- a/src/main/webapp/style/less/overrides.less
+++ b/src/main/webapp/style/less/overrides.less
@@ -54,12 +54,11 @@
         }
     }
 }
-
 .table-responsive {
-    overflow-x: auto;
+    /* See http://stackoverflow.com/a/33809511/1830334 */
+    overflow-x: inherit;
     padding-top: 10px;
 }
-
 .container-fluid > .navbar-collapse,
 .container-fluid > .navbar-header,
 .container > .navbar-collapse,
@@ -69,7 +68,6 @@
     -webkit-box-shadow: none;
     box-shadow: none;
 }
-
 select {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -79,11 +77,9 @@ select {
     padding: .5em;
     padding-right: 1.5em
 }
-
 .nav > li.dropdown.open {
     position: static;
 }
-
 .nav > li.dropdown.open .dropdown-menu {
     display: table;
     width: 100%;
@@ -91,7 +87,6 @@ select {
     left: 0;
     right: 0;
 }
-
 .dropdown-menu > li {
     display: table-cell;
 }
